<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
android:id="@+id/card_view"
android:layout_width="match_parent"
android:layout_height="90dp"
android:layout_gravity="center"
card_view:cardElevation="4dp"
card_view:cardCornerRadius="2dp"
android:layout_marginBottom="2dp">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvCustomerName"
        android:textSize="24sp"
        android:text="@string/customer_name"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
        android:id="@+id/tvItems"
        android:layout_below="@id/tvCustomerName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/order_items"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvNumber"
        android:layout_alignParentRight="true"
        android:text="@string/number_of_items"
        android:textSize="22sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceListItem"/>

</RelativeLayout>


</android.support.v7.widget.CardView>