<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_gravity="center"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="2dp"
    android:layout_marginBottom="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvName"
            android:textSize="24sp"
            android:text="@string/menu_item_name"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_below="@id/tvName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/description"
            android:textStyle="italic"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_alignParentRight="true"
            android:text="@string/price"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <CheckBox
            android:id="@+id/cbAdd"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvPrice"
            android:textSize="20sp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</android.support.v7.widget.CardView>